fix spacing between list items

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,7 +134,7 @@ body::-webkit-scrollbar {
   }
   
   li {
-    margin: 1em 0;
+    margin: 0.1em 0;
   }
 
   li::marker {
